<resources>
    <string name="app_name">BillWallet</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Profile</item>
        <item>Contact</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="hello">Hello</string>
    <string name="dashboard">Dashboard</string>
    <string name="transaction">Transaction</string>
    <string name="synchronze">Synchronize</string>
    <string name="new_income">New Income</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="submit">SUBMIT</string>
    <string name="new_expense">New Expense</string>
    <string name="total">Total :</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="add_data">Add Data</string>
    <string name="add_income">Add Income</string>
    <string name="add_btn">ADD</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="add_expense">Add Expense</string>
    <string name="date"><![CDATA[Date]]></string>
    <string name="time">Time</string>
    <string name="update">Update Data</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure want to delete ?</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_btn">DELETE</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="name">Ahmad Yunus</string>
</resources>
