<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutHome"
    android:layout_height="match_parent">

    <!-- activity view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        android:background="@color/colorAccent"
        >
        <TextView
            style="@style/header_activity"
            android:text="@string/transaction"
            />
        <android.support.v7.widget.CardView
            style="@style/card_view"
            cardview:cardCornerRadius="2dp">
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">
            <TextView
                style="@style/header_cardview"
                android:text="@string/new_income"/>
                <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                style="@style/edit_text_input"
                android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                style="@style/edit_text_input"
                android:hint="@string/amount" />
            </android.support.design.widget.TextInputLayout>
                <Button
                    style="@style/button_submit"
                    android:text="@string/submit"
                 />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            style="@style/card_view"
            cardview:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">
                <TextView
                   style="@style/header_cardview"
                    android:text="@string/new_expense"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/edit_text_input"
                        android:hint="@string/description"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                       style="@style/edit_text_input"
                        android:hint="@string/amount"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    style="@style/button_submit"
                    android:text="@string/submit"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
